--- a/struct/templates/prototypes/refli/blog-post.pug
+++ b/struct/templates/prototypes/refli/blog-post.pug
@@ -27,7 +27,7 @@ html(dir="ltr", lang="en")
                 small.breadcrumb 2024-01-12
             .switcher
                 .flow-all
-                    p Nearly a year into its development, it's about time we introduced Refli. This blog post is our first step in sharing the concept and vision behind our project focused on simplifying Belgian payroll calculations.
+                    p Nearly a year into its development, it's about time we introduced Refli. This blog post is our first step to share the concept and vision behind our project, which is focused on simplifying Belgian payroll calculations.
 
                 div
                     // empty
@@ -35,7 +35,7 @@ html(dir="ltr", lang="en")
             .c-content.flow-all.limit-42em
                 p Refli is primarily focused on making Belgian payroll calculations clearer and more accessible. Our work is designed to serve a wide audience, including students, payroll professionals, and developers, by providing essential tools and information in a single, unified and comprehensive platform.
 
-                p To establish a solid foundation for Refli, we've developed it around a three-layered core. It starts with the Belgian legislative texts and progresses to detailed, precise computations. This layered approach is visualized in the following diagram, showing how each layer builds upon the previous one:
+                p To establish a solid foundation for Refli, we build it around a three-layer core. It starts with the Belgian legislative texts and progresses to detailed, precise computations. This layered approach is visualized in the diagram below, which shows how each layer builds on the previous one:
 
                 style.
                   svg { display: block; margin: auto; }
@@ -43,19 +43,19 @@ html(dir="ltr", lang="en")
 
                 h2 Legislative texts
 
-                p Starting from the bottom of the above schema, the first layer is a set of legislative texts (e.g. laws or orders). This is the layer that has received the most attention yet. The official version of these texts are published as PDFs (the "paper" version, sometimes also called "images") on the <a href="https://www.ejustice.just.fgov.be">Official Belgian Journal web site</a> (maintained by the PFS Justice).
+                p Starting from the bottom of the above schema, the first layer is a set of legislative texts (e.g. laws or orders). This is the layer that has received the most attention so far. The official version of these texts is published as PDFs (the "paper" version, sometimes also called "images") on the <a href="https://www.ejustice.just.fgov.be">Belgian Official Journal website</a> (maintained by the PFS Justice).
 
-                p In addition to those PDFs, the PFS Justice also makes available three other representations: an HTML version of those PDFs, but also PDFs and their HTML counterparts of "consolidated" texts. The consolidated texts are offered in a separate part of their web site called <a href="https://www.ejustice.just.fgov.be/cgi_loi/loi.pl">Justel</a>. (HTML is the main computer code used to describe web pages.)
+                p In addition to these PDFs, the PFS Justice also provides three other representations: an HTML version of these PDFs, but also PDFs and their HTML counterparts of "consolidated" texts. The consolidated texts are offered in a separate part of their website called <a href="https://www.ejustice.just.fgov.be/cgi_loi/loi.pl">Justel</a>. (HTML is the main computer code used to describe web pages.)
 
-                p To create the first layer within the core of Refli, we currently process the consolidated HTML version of the legislative texts. Within Refli, we call that first layer <a href="https://refli.be/fr/lex">Lex Iterata</a>.
+                p To create the first layer within the core of Refli, we currently process the consolidated HTML version of the legislative texts. Within Refli, we call this first layer <a href="https://refli.be/fr/lex">Lex Iterata</a>.
 
-                p Iterata is a Latin word that means "repeated". It also looks like the word "iterated". We want to convey that we present legislative texts "again", in a novel way, and that we intend to build the rest of Refli progressively on top of it.
+                p Iterata is a Latin word meaning "repeated". It also looks like the word "iterated". We want to convey that we are presenting legislative texts "again", in a novel way, and that we intend to build the rest of Refli progressively on top of it.
 
-                p The processing of the consolidated texts entails recovering the high-level structure (headings, articles, paragraphs, ...) of the texts themselves and some metadata (for instance a link to the original PDF or its page number within it). We also recover some lower-level structure such as article numbers (whether they use roman or arabic numbers, numeral adverbs (e.g. bis, ter, quater, ...), number separators (sometimes dots, sometimes forward slashes, ...)). This structured content is then stored in a relational database for further processing and querying.
+                p Processing of the consolidated texts involves recovering the high-level structure (headings, articles, paragraphs, ...) of the texts themselves and some metadata (for example a link to the original PDF or its page number within it). We also recover some lower-level structure such as article numbers (whether they use Roman or Arabic numerals, numeral adverbs (e.g. bis, ter, quater, ...), number separators (sometimes dots, sometimes forward slashes, ...)). This structured content is then stored in a relational database for further processing and querying.
 
-                p In other words, Lex Iterata offers the consolidated texts of the Official Belgian Journal in a new HTML form but we want to go a bit further by leveraging our structured representation.
+                p In other words, Lex Iterata offers the consolidated texts of the Belgian Official Journal in a new HTML form but we want to go a bit further by leveraging our structured representation.
 
-                p To better see the various forms that the legislative texts can take, here are some links for an example text, as offered by the PFS Justice:
+                p To better see the different forms that the legislative texts can take, here are some links to a sample text offered by the PFS Justice:
 
                 style.
                    ul { list-style: disc; }
@@ -70,7 +70,7 @@ html(dir="ltr", lang="en")
                   li
                     a(href="https://www.ejustice.just.fgov.be/eli/arrete/2023/12/17/2023206853/justel") Its consolidated HTML version
 
-                p And here is a link for the same text, as offered by Lex Iterata:
+                p And here is a link to the same text as provided by Lex Iterata:
 
                 ul
                   li
@@ -81,7 +81,7 @@ html(dir="ltr", lang="en")
             .c-content.flow-all.limit-42em.details
                 p For the reader with a technical background or simply more curious about our work, we describe some additional representations we make available. Feel free to skip this section.
 
-                p In addition of the HTML representation, here are some other links for the same text that Lex Iterata also offers:
+                p In addition to the HTML representation, here are some other links for the same text that Lex Iterata also offers:
 
                 ul
                   li
@@ -89,54 +89,54 @@ html(dir="ltr", lang="en")
                   li
                     a(href="https://raw.githubusercontent.com/hypered/iterata-md/main/texts/2023/20/2023206853.md") A Markdown representation
                   li
-                    a(href="https://github.com/hypered/iterata-md/blob/main/texts/2023/20/2023206853.md") The Markdown representation rendered by GitHub
+                    a(href="https://github.com/hypered/iterata-md/blob/main/texts/2023/20/2023206853.md") The Markdown representation as rendered by GitHub
 
-                p The JSON reprentation is a technical representation for software developers (and more precisely, for the software they might create) that is easier for machines to process than an HTML page.
+                p The JSON representation is a technical representation for software developers (and, more specifically, the software they might create) that is easier for machines to process than an HTML page.
 
-                p The Markdown representation is a simple textual format that is popular with software developers. It is designed to be simple to write (for humans) and can be processed (by machines). For instance, the last link above shows how GitHub (a popular service to host source code and other text formats) can render it. (Note that the block enclosed between the lines `---` at the top of the Markdown file are an addition to the Markdown format; it is yet another textual format similar to JSON, called YAML.)
+                p The Markdown representation is a simple text format that is popular with software developers. It is designed to be easy to write (for humans) and easy to process (for machines). For example, the last link above shows how GitHub (a popular service for hosting source code and other text formats) can render it. (Note that the block enclosed between the lines `---` at the top of the Markdown file is an addition to the Markdown format; it is yet another text format similar to JSON, called YAML.)
 
-                p Since we talk a lot about various formats, you might want to see some HTML. You can do so directly in your web browser by right clicking on a page and choosing "View Page Source". A keyboard shortcut to do the same operation is normally `Ctrl-u`. (For instance, you can do this on one of the above links pointing to some HTML representation.)
+                p Since we are talking a lot about different formats, you may want to look at some HTML. You can do this directly in your web browser by right-clicking on a page and selecting "View Page Source". A keyboard shortcut for the same operation is usually `Ctrl-u`. (For instance, you can do this on any of the links above that point to an HTML representation.)
 
-                p A nice side effect of offering a Markdown representation of the legislative texts is that it makes it easier to see how they evolve. On <a href="https://github.com/hypered/iterata-md/commit/b38d0897ac3395161a13adcd386d1d50c9053dde">this GitHub page</a> you can see how two versions of the same texts have been changed. Again, such kind of change visualisation is very popular with software developers.
+                p A nice side effect of providing a Markdown representation of the legislative texts is that it makes it easier to see how they evolve. On <a href="https://github.com/hypered/iterata-md/commit/b38d0897ac3395161a13adcd386d1d50c9053dde">this GitHub page</a> you can see how two versions of the same texts have been changed. This kind of change visualisation is also very popular with software developers.
 
-                p For convenience, we also store the original HTML pages of the PFS Justice, and we can see <a href="https://github.com/hypered/iterata-src/commit/e66fbef1c87168dd9673984348665cad8b6e6f6c">the corresponding page</a> for the same conceptual changes.
+                p For convenience, we also keep the original HTML pages of the PFS Justice on GitHub, and we can see <a href="https://github.com/hypered/iterata-src/commit/e66fbef1c87168dd9673984348665cad8b6e6f6c">the corresponding page</a> for the same conceptual changes.
 
             .c-content.flow-all.limit-42em
-                p This work is really just a start and there are a lot of ways we can build upon what we have today:
+                p This work is really just a start, and there are many ways to build on what we have today:
 
                 ul
-                  li In the future, we would like to extend our work with other sources of official records (e.g. enterprise data from the national bank, case laws, ...).
-                  li We can improve the processing we do to recover even more fine-grained structure. For instance we could identify dates or turn references appearing within the texts into links to the referenced texts.
-                  li We can offer a more direct access to the underlying structured data that we recover. The JSON representation above is an example but we could also offer for instance a copy of our relational database.
-                  li We have to build a search interface. We could extend it with newer ways to query them (e.g. using a vector database and a LLM).
+                  li In the future, we would like to expand our work with other sources of official records (e.g. business data from the national bank, case law, ...).
+                  li We can improve the processing we do to recover even more fine-grained structure. For example, we could identify dates or turn references that appear in the texts into links to the referenced texts.
+                  li We can offer a more direct access to the underlying structured data that we are recovering. The JSON representation above is an example, but we could also provide, say, a copy of our relational database.
+                  li We need to build a search interface. We could extend it with newer ways of querying our data (e.g. using a vector database or an LLM).
 
                 h2 Data
 
-                p The second layer in our schema is about data, i.e. values that are meaningful and that could change later. Values can be "simple" such as numbers or words but can be richer, such as lists or tables.
+                p The second layer in our schema is about data, i.e. values that are meaningful and may change later. Values can be "simple", such as numbers or words, or they can be richer, such as lists or tables.
 
-                p The example legislative text above is a perfect example of such data as it defines the (new) values of two fractions described and used in <a href="https://refli.be/fr/lex/1967072702">another legislative text</a> for the year 2024.
+                p The example legislative text above is a perfect example of such data, as it defines the (new) values of two fractions described and used in <a href="https://refli.be/fr/lex/1967072702">another legislative text</a> for the year 2024.
 
-                p While the first layer takes a life on its own as Lex Iterata, this second layer on its own is quite conceptual. Within Refli, we can see that layer taking shape as some of the tables appearing in our documentation of the gross to net computation, for instance about the <a href="https://refli.be/fr/documentation/computation/contribution">social security contributions</a>.
+                p While the first layer takes on a life of its own as Lex Iterata, this second layer is quite conceptual on its own. Within Refli, we can see this layer taking shape in some of the tables that appear in our documentation of the gross-to-net calculation, for example on <a href="https://refli.be/fr/documentation/computation/contribution">social security contributions</a>.
 
-                p Unlike Lex Iterata which embodies very clearly the first layer of our schema, this one has not yet a clear delineation within Refli, but this is something that we want to emphasize.
+                p Unlike Lex Iterata, which very clearly embodies the first layer of our schema, this second layer does not yet have a clear delineation within Refli, but this is something that we want to emphasize.
 
                 h2 Computations
 
                 style.
                   em { font-style: italic; }
-                p The third layer is the computational core of Refli. This is where Refli stops being about information and data, and starts becoming an online computer software. It aims to simplify the <em>application</em> of legal rules when those rules can be followed by a computer, and bring this simplification to a broad range of public.
+                p The third layer is the computational core of Refli. This is where Refli stops being about information and data, and starts becoming an online computer software. Its goal is to simplify the <em>application</em> of legal rules, when those rules can be followed by a computer, and to make that simplification available to a broad range of public.
 
                 p Currently, Refli offers a single computation: given a gross salary amount, what should be the corresponding net amount. Here is an <a href="https://refli.be/fr/describe/3600.00?details">example for a gross amount of 3600EUR</a>.
 
                 h2 A beginning
 
-                p The three layers described above form the conceptual basis of Refli. Each of them can be extended significantly with its own set of richer features but more importantly Refli itself should grow.
+                p The three layers described above are the conceptual foundation of Refli. Each of them can be extended significantly with its own set of richer features but more importantly Refli itself should grow.
 
-                p On top of those layers we have to build additional features (such as user accounts for individuals or companies, search interface, saving results or offering them as PDFs, managing multiple computations over time, ...).
+                p On top of these layers we need to build additional features (like user accounts for individuals or companies, search interface, saving results or offering them as PDFs, managing multiple computations over time, ...).
 
-                p Depending on interests and feedbacks, we might want to focus on different things in the future. For instance this could be Lex Iterata (i.e. legislative texts), or on some other core aspect of Refli. For instance we can offer the raw computational capabilities of Refli over a network API, or instead turn it into a user-facing standalone product.
+                p Depending on interests and feedback, we may want to focus on different things in the future. For example, this could be Lex Iterata (i.e. legislative texts), or on some other core aspect of Refli. For instance, we can offer the raw computational capabilities of Refli via a network API, or instead turn it into a user-facing standalone product.
 
-                p We have a software developer profile but we are not specialized in human resources management, salaries or legal topics. You may have your own ideas about how we might improve Refli. For instance, maybe you're a teacher or a student and we could improve our gross to net computation to make it more useful for your own usage. If what we're building is of interest to you, <a href="https://refli.be/fr/contact">please reach out</a>, we'd love to talk to you.
+                p We have a software developer profile, but we are not specialized in HR, payroll or legal issues. You may have your own ideas on how we can improve Refli. For example, maybe you're a teacher or a student and we could improve our gross-to-net computation to make it more useful for your own use. If you are interested in what we are building, <a href="https://refli.be/fr/contact">please contact us</a>, we'd love to talk to you.
 
         footer
             .u-container
